[gd_scene load_steps=15 format=4 uid="uid://c7q57hphq4jbk"]

[ext_resource type="Script" path="res://assets/data/Bullets/Bala_Roja/bala_roja.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c7fceyaepd5wn" path="res://assets/images/elements/planilla_blasts_xa_512x512_24bits.png" id="2"]
[ext_resource type="AudioStream" uid="uid://bcrqsaws6vsrj" path="res://assets/audio/fx/win/bullet_wall_1.ogg" id="3"]
[ext_resource type="AudioStream" uid="uid://b61q5exb5e6p2" path="res://assets/audio/fx/win/bullet_wall_2.ogg" id="4"]
[ext_resource type="AudioStream" uid="uid://01cs12dudfti" path="res://assets/audio/fx/win/s_1.ogg" id="5"]
[ext_resource type="AudioStream" uid="uid://b0nk21g0cg1ai" path="res://assets/audio/fx/win/s_2.ogg" id="6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5iyd"]
size = Vector2(16, 16)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_5uxha"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_egvtx"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_gw18s"]
light_mode = 1

[sub_resource type="Animation" id="Animation_3xpiu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_Colision_Pared:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite_Daño:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite_Colision_Pared:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite_Daño:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ws3vc"]
resource_name = "hit enemy"
length = 0.16667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_Daño:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.133333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_12nvu"]
resource_name = "hit_wall"
length = 0.16667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_Colision_Pared:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.133333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite_Colision_Pared:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite_Daño:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_im4ms"]
_data = {
"RESET": SubResource("Animation_3xpiu"),
"hit enemy": SubResource("Animation_ws3vc"),
"hit_wall": SubResource("Animation_12nvu")
}

[node name="bala_roja" type="Area2D"]
collision_layer = 3072
collision_mask = 3072
script = ExtResource("1")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="CollisionShape_Area_Bala_roja" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 2
shape = SubResource("RectangleShape2D_n5iyd")

[node name="Sprite_Bala_roja" type="Sprite2D" parent="."]
z_index = 4
material = SubResource("CanvasItemMaterial_5uxha")
texture = ExtResource("2")
hframes = 10
vframes = 6
frame = 7
region_enabled = true
region_rect = Rect2(0, 0, 600, 362)

[node name="Sprite_Daño" type="Sprite2D" parent="."]
visible = false
z_index = 4
material = SubResource("CanvasItemMaterial_egvtx")
texture = ExtResource("2")
hframes = 4
region_enabled = true
region_rect = Rect2(0, 340, 96, 24)

[node name="Sprite_Colision_Pared" type="Sprite2D" parent="."]
z_index = 3
material = SubResource("CanvasItemMaterial_gw18s")
texture = ExtResource("2")
offset = Vector2(-10, 0)
flip_h = true
hframes = 4
region_enabled = true
region_rect = Rect2(0, 122.329, 283.776, 77.671)

[node name="sfx_Daño" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")

[node name="sfx_Colision_Pared" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4")

[node name="sfx_block" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5")

[node name="sfx_block2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6")

[node name="Animaciones" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_im4ms")
}

[node name="RayCast_Arriba" type="RayCast2D" parent="."]
target_position = Vector2(0, -16)
collision_mask = 256

[node name="RayCast2D_Derecha" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)
collision_mask = 256

[node name="RayCast2D_Izquierda" type="RayCast2D" parent="."]
target_position = Vector2(-16, 0)
collision_mask = 256

[node name="RayCast2D_Abajo" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)
collision_mask = 256

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
